--- a/markdown.html
+++ b/markdown.html
@@ -364,11 +364,12 @@ summary {
 
 <h1 class="title toc-ignore">Construction jobs amount, a statistics review</h1>
 <h4 class="author">Celso Cachola</h4>
-<h4 class="date">23/07/2020</h4>
+<h4 class="date">26/07/2020</h4>
 
 </div>
 
 
+<p><strong>This article is a just kidding between data science and civil construction. It’s my first job in software R, I hope to improve more in the use of it.</strong></p>
 <div id="construction-jobs" class="section level2">
 <h2>Construction jobs</h2>
 <p>In Brazil, the civil construction is the first sector to be affected by the economic crises. Great part of the professionals of the area comment this. In the Lava Jato operation starts, the same operation that has arrested the Lula president, the civil construction sector has started to enter a large crisis. Many employes has fired, many enterprises lost market value and many works has stayed in half (including the some works for FIFA World Cup 2014 and Rio Olimpic Games 2016). But, how statistics can show that? In this text, I pretend to show you how numbers can say, although numbers don’t say, this Thus, I used civil construction data from the Annual Survey of the Construction Industry - PAIC, elaborate by Brazilian Institute of Geographic and Statistic - IBGE. My objective is compare the GDP numbers with jobs amount from 2007 to 2018 and analyze them. I used basically 3 variables: total of employees in Brazil, GDP of civil construction sector and crude GDP of Brazil.</p>
